--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "newman run ./tests/Todoist.collection.json -e ./tests/Todoist.environment.json"
+    "test": "newman run ./tests/Todoist.collection.json -e ./tests/Todoist.environment.json --env-var authToken=$TOKEN"
   },
   "author": "",
   "license": "ISC",
