--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - run:
           name: The First Step
+          env:
+            TOKEN: ${{ secrets.AUTHTOKEN }}
           command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+            echo $TOKEN
